updated experience, projects, styling

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@
   font-weight: 300;
 }
 
+/* * {
+  outline: 1px solid red !important;
+} */
+
 * {
   margin: 0;
   padding: 0;
@@ -70,7 +74,7 @@ input:focus, textarea:focus, select:focus {
 @media (min-width:1700px) {
   main .container {
     max-width: 100%;
-    padding: 0 150px;
+    width: 100%;
   }
 } 
 
@@ -83,7 +87,7 @@ p.danger {
 }
 
 nav.navbar {
-  padding: 18px 0;
+  padding: 2%;
   position: fixed;
   width: 100%;
   top: 0;
@@ -91,24 +95,68 @@ nav.navbar {
   transition: 0.32s ease-in-out;
 }
 
+.navbar-container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.navbar-inner {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar-brand {
+  flex: 1;
+}
+
+.navbar-center {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+}
+
+.navbar-links {
+  display: flex;
+  gap: 30px;
+}
+
+.navbar-right {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 20px;
+}
+
 nav.navbar a.navbar-brand img {
   border-radius: 50%;
   border: 4px solid rgb(122, 168, 249);
+  width: 60px;
+  max-width: 100%;
 }
 
 nav.navbar.scrolled {
-  padding: 0px 0;
+  padding: 1.5% 0;
   background-color: rgb(23, 39, 39);
 }
 
 nav.navbar a.navbar-brand {
-  width: 8%;
-  margin-top: 10px;
-  margin-bottom: 10px
+  width: auto;
+  margin-left: 20px;
+  margin-right: auto;
 }
 
-.navbar-nav {
-  margin-top: 15px;
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-links-center {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
 }
 
 nav.navbar .navbar-nav .nav-link {
@@ -118,7 +166,6 @@ nav.navbar .navbar-nav .nav-link {
   font-size: 22px;
   border: 4px solid rgb(122, 168, 249);
   margin: 10px;
-  padding: 10px 60px;
   transition: background-color 0.5s ease-in-out, color 0.5s ease;
   border-radius: 30px;
 }
@@ -128,19 +175,25 @@ nav.navbar .navbar-nav .nav-link:hover {
   color: #000000 !important;
 }
 
+@media (min-width: 1400px) {
+  nav.navbar .navbar-nav .nav-link {
+    font-size: 26px;
+    padding: 14px 80px;
+  }
+
+  nav.navbar a.navbar-brand img {
+    width: 90px;
+  }
+}
+
 .active-link {
   background-color: #90fff0 !important;
   color: #000000 !important;
 }
 
-span.navbar-text {
-  display: inline-block;
-  margin-left: 100px;
-}
-
 .social-icon a {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   background: rgb(122, 168, 249);
   display: inline-flex;
   border-radius: 50%;
@@ -375,12 +428,66 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .banner {
-  margin-top: 0;
+  margin-top: 10px;
+  width: 100%;
   background-position: top center;
-  padding-top: 160px;
-  padding-bottom: 150px;
+  padding-top: 200px;
+  padding-bottom: 100px;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.banner-inner {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+@media (min-width: 1800px) {
+
+  .banner {
+    padding-top: 180px !important;
+    padding-bottom: 150px !important;
+  }
+  .banner-inner {
+    max-width: 1800px;
+    margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .banner h1{
+    font-size: 100px !important;
+  }
+  .banner h1:hover {
+    font-size: 105px !important;
+  }
+  .banner h2 {
+    font-size: 60px !important;
+  }
+  .banner h4 {
+    font-size: 35px !important;
+  }
+  .banner img {
+    width: 600px !important;
+    height: 600px !important;
+  }
+  .banner img:hover {
+    width: 650px !important;
+    height: 650px !important;
+  }
+  .banner .about-container{
+    padding-top: 10% !important;
+    padding-bottom: 10% !important;
+    padding-left: 20% !important;
+    padding-right: 20% !important;
+  }
+}
+
+.banner .about-container {
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 .banner h1 {
@@ -399,19 +506,23 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-size: 85px;
 }
 
+.banner .row {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
 .banner h2 {
   font-family:'Segoe UI', 'Tahoma', 'Geneva', 'Verdana', 'sans-serif';
   font-weight: 700;
   font-size: 50px;
   margin-top: 40px;
-  padding: 0;
   text-align: left;
 }
 
 .about {
   text-align: center !important;
-  margin-top: 70px !important;
-  /* margin-bottom: 30px !important; */
 }
 
 .banner h3 {
@@ -425,8 +536,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-size: 25px;
   margin-top: 20px;
   line-height: 40px;
-  margin-left: 300px;
-  margin-right: 300px;
   text-align: center;
 }
 
@@ -435,8 +544,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-size: 24px;
   margin-top: 50px;
   line-height: 40px;
-  margin-left: 300px;
-  margin-right: 300px;
   text-align: center;
 }
 
@@ -445,6 +552,24 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-size: 18px;
   width: 96%
 }
+
+.banner img {
+  display: block;
+  margin: 0 auto;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  border: 4px solid #7aa8f9;
+  box-shadow: 0 4px 20px rgba(89, 162, 241, 0.2);
+  animation: updown 7s linear infinite;
+  transition: all 200ms linear
+}
+
+.banner img:hover {
+  width: 550px;
+  height: 550px;
+}
+
 
 .button-container {
   display: flex;
@@ -470,21 +595,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-color: #90fff0;
   color: #000;
   animation: pop-hover 0.7s forwards;
-}
-
-.banner img {
-  width: 500px;
-  height: 500px;
-  border-radius: 50%;
-  border: 4px solid #7aa8f9;
-  box-shadow: 0 4px 20px rgba(89, 162, 241, 0.2);
-  animation: updown 7s linear infinite;
-  transition: all 200ms linear
-}
-
-.banner img:hover {
-  width: 550px;
-  height: 550px;
 }
 
 @keyframes updown {
@@ -528,20 +638,20 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 .vertical-timeline-element-subtitle {
   color: #134b2e;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 600;
 }
 
 .vertical-timeline-element-description{
   color:#000000;
-  font-size: 14px !important;
+  font-size: 15px !important;
   font-weight: 200;
   white-space: pre-line;
 }  
 
 .vertical-timeline-element-skills {
   color:#2d1e77;
-  font-size: 12px !important;
+  font-size: 14px !important;
   font-weight: 200;
 }
 
@@ -552,7 +662,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 .projects-gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 2rem;
 }
 
@@ -600,12 +710,23 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-size: 1.3rem;
 }
 
+.project-content h5 {
+  font-size: 0.8rem;
+  color:#bbd1f8;
+  margin-top: 0.5rem;
+}
+
+.project-content h6 {
+  font-size: 0.9rem;
+  color: #cfdffc;
+  margin-top: 0.5rem;
+}
+
 .project-content p {
   font-size: 0.95rem;
   margin-top: 0.5rem;
   line-height: 1.4;
 }
-
 
 h3 {
   font-size: 20px;
