--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,6 @@ nav.navbar a.navbar-brand img {
 }
 
 nav.navbar.scrolled {
-  padding: 1.5% 0;
   background-color: rgb(23, 39, 39);
 }
 
@@ -191,14 +190,21 @@ nav.navbar .navbar-nav .nav-link:hover {
   color: #000000 !important;
 }
 
+.social-icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 14px;
+  gap: 12px;
+}
+
 .social-icon a {
   width: 60px;
   height: 60px;
   background: rgb(122, 168, 249);
-  display: inline-flex;
+  display: flex;
   border-radius: 50%;
-  margin-right: 12px;
-  margin-top: 14px;
   align-items: center;
   justify-content: center;
   line-height: 1;
@@ -503,7 +509,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .banner h1:hover {
-  font-size: 85px;
+  font-size: 83px;
 }
 
 .banner .row {
