--- a/src/App.css
+++ b/src/App.css
@@ -132,7 +132,7 @@ nav.navbar {
 nav.navbar a.navbar-brand img {
   border-radius: 50%;
   border: 4px solid rgb(122, 168, 249);
-  width: 60px;
+  width: 90px;
   max-width: 100%;
 }
 
@@ -162,9 +162,10 @@ nav.navbar .navbar-nav .nav-link {
   font-weight: 600;
   color: #ffffff !important;
   background-color: rgb(122, 168, 249);
-  font-size: 22px;
+  font-size: 26px;
   border: 4px solid rgb(122, 168, 249);
   margin: 10px;
+  padding: 14px 60px;
   transition: background-color 0.5s ease-in-out, color 0.5s ease;
   border-radius: 30px;
 }
@@ -174,20 +175,15 @@ nav.navbar .navbar-nav .nav-link:hover {
   color: #000000 !important;
 }
 
-@media (min-width: 1400px) {
+@media (min-width: 1700px) {
   nav.navbar .navbar-nav .nav-link {
-    font-size: 26px;
+    font-size: 30px;
     padding: 14px 80px;
   }
 
   nav.navbar a.navbar-brand img {
     width: 90px;
   }
-}
-
-.active-link {
-  background-color: #90fff0 !important;
-  color: #000000 !important;
 }
 
 .social-icon {
@@ -213,8 +209,8 @@ nav.navbar .navbar-nav .nav-link:hover {
 
 .social-icon a::before {
   content: "";
-  width: 42px;
-  height: 42px;
+  width: 50px;
+  height: 50px;
   position: absolute;
   background-color: #90fff0;
   border-radius: 50%;
@@ -387,10 +383,6 @@ nav.navbar .navbar-nav .nav-link:hover {
 
 .navbar-text button:hover {
   color: #293142;
-}
-
-.active-link{
-  background-color: #90fff0;
 }
 
 nav.navbar .navbar-toggler-icon {
